fixed cover overlap issue

--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -19,14 +19,20 @@ body {
 }
 
 .cover { /*image from https://www.transparenttextures.com/*/
-	background-color: rgba(0,0,0,.6);
+	background-color: rgba(0, 0, 0, .6);
 	background-image: url(../img/otis-redding.png);
-	z-index:10;
+	z-index: 10;
 	top: 0;
-	position:absolute;
-	width: 100vw;
+	position: absolute;
+	width: 99.1vw;
 	height: 100vh;
 }
+@media (max-width: 750px) {
+	.cover {
+		width: 100vw;
+	}
+}
+
 
 .custom-btn{ /*site navigation buttons*/
 	display: inline-block;
